[gd_scene load_steps=13 format=3 uid="uid://c2ulo6dgbvcf0"]

[ext_resource type="Script" uid="uid://bo5hsit1wovte" path="res://scripts/menu/main_menu.gd" id="1_06t4h"]
[ext_resource type="PackedScene" uid="uid://dbl6hwa0v1ug3" path="res://scenes/game/game.tscn" id="2_7vrkn"]
[ext_resource type="Texture2D" uid="uid://qqqto015vns6" path="res://main_menu_assets/pizza_button_with_pepperoni.png" id="3_fu7sn"]
[ext_resource type="Texture2D" uid="uid://dx017wlltbnqy" path="res://main_menu_assets/pizza_button.png" id="3_jix8l"]
[ext_resource type="PackedScene" uid="uid://b7tniapdok74a" path="res://scenes/menu/credits.tscn" id="3_nlkkf"]
[ext_resource type="PackedScene" uid="uid://ddmwh06doxmyh" path="res://scenes/menu/version_notes.tscn" id="4_qe12f"]
[ext_resource type="Texture2D" uid="uid://dhayfxyfhmkye" path="res://main_menu_assets/cutting_board_background_main_menu.png" id="5_qe12f"]
[ext_resource type="AudioStream" uid="uid://bkjbu367au33d" path="res://audio/Italian Sweetness.mp3" id="5_vovv2"]
[ext_resource type="AudioStream" uid="uid://bqaalut7tr634" path="res://audio/Pizza.mp3" id="6_1k4da"]
[ext_resource type="AudioStream" uid="uid://w05nvw6kr2tm" path="res://audio/vine-boom.mp3" id="6_8qtwp"]
[ext_resource type="Theme" uid="uid://8b2wdrop1y1o" path="res://themes/menu_buttons.tres" id="11_bbqo6"]
[ext_resource type="Texture2D" uid="uid://do8mlbdcolr60" path="res://main_menu_assets/title screen.png" id="12_d4hu8"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_06t4h")
game_scene = ExtResource("2_7vrkn")
credits_scene = ExtResource("3_nlkkf")
changelog_scene = ExtResource("4_qe12f")
MENU_MUSIC = ExtResource("5_vovv2")
PIZZA_MUSIC = ExtResource("6_1k4da")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.690695, 0.00276425, 0.932588, 1)

[node name="CuttingBoardBackgroundMainMenu" type="Sprite2D" parent="ColorRect"]
texture_filter = 1
position = Vector2(960, 540)
texture = ExtResource("5_qe12f")

[node name="RAHHH" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 234.0
offset_top = 232.0
offset_right = 328.0
offset_bottom = 263.0
text = "RAHHHHH"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="ColorRect/RAHHH"]
unique_name_in_owner = true
stream = ExtResource("6_8qtwp")
bus = &"MenuSFX"

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -564.0
offset_top = -88.9999
offset_right = 311.0
offset_bottom = 40.0001
grow_horizontal = 2
grow_vertical = 2
rotation = 0.18166
scale = Vector2(0.60459, 0.60459)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 50
text = "It Kicks Ass!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PizzaButton2" type="Sprite2D" parent="ColorRect"]
texture_filter = 1
position = Vector2(952, 617)
scale = Vector2(1.3, 1.3)
texture = ExtResource("3_jix8l")

[node name="changelog" type="Button" parent="ColorRect"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 845.0
offset_top = 559.0
offset_right = 1059.0
offset_bottom = 626.0
text = "Changelog"
flat = true

[node name="PizzaButton" type="Sprite2D" parent="ColorRect"]
texture_filter = 1
position = Vector2(957, 724)
scale = Vector2(1.3, 1.3)
texture = ExtResource("3_jix8l")
flip_h = true

[node name="credits" type="Button" parent="ColorRect"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 844.0
offset_top = 671.0
offset_right = 1066.0
offset_bottom = 732.0
text = "cREDITS"
flat = true

[node name="PizzaButtonWithPepperoni" type="Sprite2D" parent="ColorRect"]
texture_filter = 1
position = Vector2(956, 845)
scale = Vector2(1.6, 1.6)
texture = ExtResource("3_fu7sn")

[node name="start" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 820.0
offset_top = 779.0
offset_right = 1098.0
offset_bottom = 856.0
theme = ExtResource("11_bbqo6")
theme_override_font_sizes/font_size = 50
text = "Start"
flat = true

[node name="PizzaButtonWithPepperoni2" type="Sprite2D" parent="ColorRect"]
texture_filter = 1
position = Vector2(1716, 130)
scale = Vector2(2.14, 2.14)
texture = ExtResource("3_fu7sn")

[node name="CloseGameButton" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 1539.0
offset_top = 41.0
offset_right = 1903.0
offset_bottom = 145.0
theme = ExtResource("11_bbqo6")
theme_override_font_sizes/font_size = 66
text = "Quit game"
flat = true

[node name="TitleScreen" type="Sprite2D" parent="ColorRect"]
texture_filter = 1
position = Vector2(944, 308)
scale = Vector2(1.53, 1.53)
texture = ExtResource("12_d4hu8")

[connection signal="pressed" from="ColorRect/RAHHH" to="." method="_on_rahhh_pressed"]
[connection signal="pressed" from="ColorRect/changelog" to="." method="_on_changelog_pressed"]
[connection signal="pressed" from="ColorRect/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="ColorRect/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="ColorRect/CloseGameButton" to="." method="_on_close_game_button_pressed"]
